# study_unix_professional_stevens

./: CMakeLists.txt  CMakePresets.json  README.md
10/: 10_print_sigprocmask.cpp  11_print_sigpending.cpp  14_usage_sigsetjmp.cpp  16_usage_sigsuspend.cpp  1_handle_sigusr.cpp  22_handle_sigtstp.cpp  24_signal_handshake.cpp  2_call_non_reentrant.cpp  3_handle_sigcld.cpp  4_custom_sleep1.cpp  5_custom_sleep2.cpp  7_read_signal_timeout.cpp
11/: 10_usage_cond.cpp  11_usage_barrier.cpp  2_exit_thread.cpp  5_usage_mutex.cpp  6_usage_two_mutex.cpp  8_usage_pthread_mutex_timedlock.cpp
12/: 1_detach_thread.cpp  6_thread_handle_signal.cpp
13/: 3_daemon_reread_conf.cpp  4_daemon_reread_conf.cpp
14/: 11_forever_lock_file.cpp  1_write_nonblock.cpp  4_deadlock_file.cpp  6_check_mandatority_locking.cpp  7_convert_rot13.cpp  8_convert_rot13_io_uring.cpp
15/: 11_print_shm.cpp  12_shm_dev_zero.cpp  13_epoll_close_events.cpp  14_io_uring_close_events.cpp  1_pipe.cpp  2_pipe_more.cpp  4_popen_more.cpp  6_filter_lower_case.cpp  7_pipe_filter_lower_case.cpp  8_filter_add_2.cpp  9_pipe_filter_add_2.cpp
16/: 1_usage_getaddrinfo.cpp  5_remote_uptime_client.cpp  5_remote_uptime_client_tcp.cpp  6_remote_uptime_server.cpp  6_remote_uptime_server_tcp.cpp  7_remote_uptime_client_udp.cpp  8_remote_uptime_server_udp.cpp
17/: 1_unix_socket_mqueue_read.cpp  2_unix_socket_mqueue_write.cpp  3_unix_socket_transmit_fd_fork.cpp  4_unix_socket_transmit_fd_daemon_client.cpp  5_unix_socket_transmit_fd_daemon_server.cpp
2/: 2_print_sysconf_pathconf.cpp  4_usage_open_max.cpp
4/: 10_usage_st_dev_st_rdev.cpp  11_cp_holes.cpp  12_myftw_chdir.cpp  1_usage_stat.cpp  2_usage_access.cpp  4_usage_chmod.cpp  9_usage_getcwd.cpp
5/: 1_usage_getc_putc.cpp  2_usage_fgets_fputs.cpp  4_usage_tmp_file.cpp  5_usage_mkstemp.cpp  6_usage_fmemopen.cpp  7_mysetbuf.cpp
6/: 1_usage_getpwnam.cpp  2_usage_strftime.cpp
7/: 2_usage_atexit.cpp  3_print_argv.cpp  4_setjmp.cpp  7_incorrect_usage_autoval.cpp
8/: 10_exec_interp_file.cpp  12_usage_system.cpp  13_usage_system_set_user_id.cpp  19_usage_tms.cpp  1_usage_fork.cpp  3_usage_pr_exit.cpp  5_prevention_zombie.cpp  6_race_for_resources.cpp  9_echoall.cpp
lib/: apue.h  apue_daemon.cpp  apue_file.cpp  apue_ipc_pipe.cpp  apue_ipc_signal.cpp  apue_lock.cpp  apue_network.cpp  apue_proc_threads.cpp  apue_time.cpp  apue_unix_socket.cpp
tasks/: CMakeLists.txt  CMakePresets.json
tasks/1/: 7.cpp  7_print_uid_gid.cpp  8.cpp  8_read_command_and_execute.cpp
tasks/10/: 10_print_sigprocmask.cpp  11_print_sigpending.cpp  14_usage_sigsetjmp.cpp  15_usage_sigsuspend.cpp  22_handle_sigtstp.cpp  23_timers.cpp  24_signal_handshake.cpp  2_call_non_reentrant.cpp  3_handle_sigcld.cpp  4_custom_sleep1.cpp  5_custom_sleep2.cpp  7_read_signal_timeout.cpp
tasks/11/: 10_usage_cond.cpp  1_print_threads_id.cpp  3_exit_thread_data_in_stack.cpp  4_usage_pthread_cleanup.cpp  5_usage_mutex.cpp  6_usage_two_mutex.cpp  7_ej.cpp  9_usage_rwlock.cpp
tasks/12/: 1_detach_thread.cpp  2_recursive_mutex.cpp  3_thread_safe_getenv.cpp  7_usage_pthread_atfork.cpp
tasks/13/: 1_daemonize.cpp  2_singletone_daemon.cpp  3_daemon_thread_reread_conf.cpp
tasks/14/: 10_copy_file_with_mmap.cpp  4_deadlock_file.cpp  6_check_mandatority_locking.cpp  7_convert_rot13.cpp  8_convert_rot13_aio.cpp
tasks/15/: 6_pipe_filter_lower_case.cpp
tasks/2/: 2.cpp  3.cpp  3_usage_path_alloc.cpp  4.cpp  4_usage_open_max.cpp
tasks/4/: 1.cpp  10_usage_st_dev_st_rdev.cpp  11_cp_holes.cpp  12_myftw_chdir.cpp  1_usage_stat.cpp  2.cpp  2_usage_access.cpp  3.cpp  3_usage_umask.cpp  4_usage_chmod.cpp  5_usage_unlink.cpp  6_usage_funitimes.cpp  7.cpp  7_myftw.cpp  8_usage_chdir.cpp  9_usage_getcwd.cpp
tasks/5/: 1_usage_getc_putc.cpp  3_buffering_mods.cpp  4_usage_tmp_file.cpp  7_mysetbuf.cpp
tasks/6/: 1_usage_getpwnam.cpp  2_usage_strftime.cpp  3_getshadow.cpp  4_print_uname.cpp
tasks/7/: 6_longjmp_volatile.cpp  7_incorrect_usage_autoval.cpp  8_print_res_limits.cpp
tasks/8/: 12_usage_system.cpp  14_print_uids.cpp  16_example_for_acct.cpp  17_usage_acct.cpp  18_example_priority.cpp  1_usage_fork.cpp  20_spawn_zombie.cpp  2_usage_vfork.cpp  3_usage_pr_exit.cpp  5_prevention_zombie.cpp  6_race_for_resources.cpp  7_prevent_race_for_resources.cpp  8_usage_exec.cpp  9_echoall.cpp
tasks/9/: 1_orphan_group_proc.cpp  2_new_session.cpp
tasks/lib/: apue.cpp  apue.cppm  apue.h  apue_ipc_pipe.cpp  apue_time.cpp
