cmake_minimum_required(VERSION 3.20)
project(tasks LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS ON)
set(CMAKE_CXX_COMPILER g++)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")

find_package(PkgConfig QUIET)
if (NOT PkgConfig_FOUND)
    message(FATAL_ERROR "Tool pkg-config not found. Install: sudo apt install pkg-config")
endif()
find_package(PkgConfig REQUIRED)
pkg_check_modules(LIBURING IMPORTED_TARGET liburing)
if (NOT LIBURING_FOUND)
    message(FATAL_ERROR "Library liburing not found. Install: sudo apt install liburing-dev")
endif()

file(GLOB LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/lib/*.h")
file(GLOB LIB_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/lib/*.cpp")
add_library(Lib ${LIB_HEADERS} ${LIB_SOURCES})
target_include_directories(Lib PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/lib")

foreach (PART RANGE 1 19)
    file(GLOB PART_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/${PART}/*.cpp")
    foreach (TASK ${PART_SOURCES})
        get_filename_component(TASK_NAME ${TASK} NAME_WE)
        set(TARGET_NAME "${PART}_${TASK_NAME}")
        add_executable(${TARGET_NAME} ${TASK})
        target_link_libraries(${TARGET_NAME} PRIVATE Lib PkgConfig::LIBURING)
    endforeach ()
endforeach ()