cmake_minimum_required(VERSION 4.0.0)
project(tasks LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_SCAN_FOR_MODULES ON)
set(CMAKE_CXX_COMPILER_IMPORT_STD ON)
set(CMAKE_CXX_EXTENSIONS OFF)


file(GLOB LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/lib/*.h")
file(GLOB LIB_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/lib/*.cpp")
add_library(Lib ${LIB_HEADERS} ${LIB_SOURCES})
target_include_directories(Lib PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/lib")

foreach (PART RANGE 1 10)
    foreach (TASK_NUMBER RANGE 1 100)
        set(SOURCE_FILE "${PART}/${TASK_NUMBER}.cpp")
        if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${SOURCE_FILE}")
            set(TARGET_NAME "${PART}_${TASK_NUMBER}")
            add_executable(${TARGET_NAME} ${SOURCE_FILE})
            target_link_libraries(${TARGET_NAME} PRIVATE Lib)
        endif ()
    endforeach ()
endforeach ()