cmake_minimum_required(VERSION 4.0.0)
project(tasks LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS ON)
set(CMAKE_CXX_COMPILER g++)

file(GLOB LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/lib/*.h")
file(GLOB LIB_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/lib/*.cpp")
add_library(Lib ${LIB_HEADERS} ${LIB_SOURCES})
target_include_directories(Lib PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/lib")

foreach (PART RANGE 1 19)
    file(GLOB PART_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/${PART}/*.cpp")
    foreach (TASK ${PART_SOURCES})
        get_filename_component(TASK_NAME ${TASK} NAME_WE)
        set(TARGET_NAME "${PART}_${TASK_NAME}")
        add_executable(${TARGET_NAME} ${TASK})
        target_link_libraries(${TARGET_NAME} PRIVATE Lib)
    endforeach ()
endforeach ()